--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,10 @@ android {
     }
 }
 
+repositories {
+    maven { url 'https://jitpack.io' }
+}
+
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -97,7 +101,7 @@ dependencies {
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
     // MPAndroidChart
-    //implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
     implementation 'android.arch.lifecycle:extensions:1.1.1'
 }
