--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyCE2VV-Gj0H6fxqICbW_GAodV-80cmcW90"/>
+            android:value="@string/google_api_key"/>
 
     </application>
 
